[package]
name = "avfaudio-sys"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Rust bindings to AVFAudio"
homepage = "https://github.com/augmented-audio/avfaudio-sys"
repository = "https://github.com/augmented-audio/avfaudio-sys"

[lib]
doctest = false

[dependencies]
objc = "0.2.7"
block = "0.1.6"

[build-dependencies]
bindgen = "0.68.1"
