[package]
name = "avfaudio2-sys"
version = "0.2.3"
edition = "2018"
license = "MIT"
description = "Rust bindings to AVFAudio"
homepage = "https://github.com/eugenehp/avfaudio-sys"
repository = "https://github.com/eugenehp/avfaudio-sys"

[lib]
doctest = false

[dependencies]
objc = { package = "objc2", version = "0.5.2" }
block = { package = "block2", version = "0.5.1" }

[build-dependencies]
bindgen = "0.69.4"